# dfk

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  api.docurium  arena_8h_source.html  avltree_8h.html  avltree_8h__dep__incl.map  avltree_8h__incl.md5  avltree_8h_source.html  bug.html  classes.html  cond_8h.html  cond_8h__incl.md5  cond_8h_source.html  config_8h.html  config_8h_source.html  constants_8h.html  constants_8h__dep__incl.md5  constants_8h_source.html  context_8h.html  context_8h__incl.md5  context_8h_source.html  dfk.exports  dfk.pc.in  dfk_8h.html  dfk_8h__incl.md5  dfk_8h_source.html  dir_000000_000001.html  dir_51eb222a366ced0eb8876da43c2020e9.html  dir_7eecc3ca58038df8e5ee660d4ecf95ae.html  dir_b5b04569289058dd0930a94eb716d8da.html  dir_c7ede921a97717cecc0bb993699e33ef.html  dir_c7ede921a97717cecc0bb993699e33ef_dep.map  dir_c7ede921a97717cecc0bb993699e33ef_dep.md5  (+127 more)
c++/: CMakeLists.txt  dfkcpp.pc.in
c++/include/: dfk.hpp
c++/include/dfk/: buffer.hpp  context.hpp  core.hpp  coroutine.hpp  exception.hpp  fiber.hpp  http.hpp  string_map.hpp  wrapper.hpp
c++/include/dfk/http/: method.hpp  request.hpp  request_handler.hpp  response.hpp  server.hpp  status.hpp
c++/include/dfk/middleware/: fileserver.hpp
c++/src/: buffer.cpp  common.hpp  context.cpp  core.cpp  coroutine.cpp  exception.cpp  fiber.cpp  string_map.cpp
c++/src/http/: request.cpp  request_handler.cpp  response.cpp  server.cpp  status.cpp
c++/src/middleware/: fileserver.cpp
cmake/: fw.cmake
doc/: bugz.md  code_style.md  compile_time_options.md  future.dot  mainpage.dox  roadmap.dot
include/: dfk.h
include/dfk/: arena.h  avltree.h  buf.h  bufman.h  cond.h  config.h.in  context.h  core.h  coro.h  error.h  event_loop.h  fiber.h  http.h  internal.h  list.h  log.h  loop.h  misc.h  mutex.h  once.h  sched.h  signal.h  strmap.h  strtoll.h  sync.h  tcp_server.h  tcp_socket.h  urlencoding.h
include/dfk/http/: constants.h  header.h  protocol.h  request.h  response.h  server.h
include/dfk/internal/: arena.h  avltree.h  http.h  list.h  misc.h  sponge.h
include/dfk/middleware/: fileserver.h
include/dfk/portable/: memmem.h
internal/: annotated.html  arena_8h_source.html  avltree_8h.html  avltree_8h__dep__incl.md5  avltree_8h__incl.map  avltree_8h_source.html  bug.html  classes.html  cond_8h.html  cond_8h__incl.map  cond_8h_source.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h_source.html  constants_8h.html  constants_8h__dep__incl.map  constants_8h_source.html  context_8h.html  context_8h__dep__incl.map  context_8h__dep__incl.md5  context_8h__incl.map  context_8h_source.html  dfk_8h.html  dfk_8h__incl.map  dfk_8h_source.html  dir_000000_000001.html  dir_51eb222a366ced0eb8876da43c2020e9.html  dir_51eb222a366ced0eb8876da43c2020e9_dep.map  dir_51eb222a366ced0eb8876da43c2020e9_dep.md5  dir_7eecc3ca58038df8e5ee660d4ecf95ae.html  dir_7eecc3ca58038df8e5ee660d4ecf95ae_dep.map  dir_7eecc3ca58038df8e5ee660d4ecf95ae_dep.md5  dir_b5b04569289058dd0930a94eb716d8da.html  dir_b5b04569289058dd0930a94eb716d8da_dep.map  dir_b5b04569289058dd0930a94eb716d8da_dep.md5  dir_c7ede921a97717cecc0bb993699e33ef.html  error_8h.html  error_8h__incl.map  error_8h_source.html  (+142 more)
internal/search/: all_0.js  all_3.js  all_4.js  all_6.js  all_a.js  classes_0.js  defines_0.js  enums_0.js  files_1.js  files_2.js  files_6.js  files_7.js  files_b.js  functions_0.js  groups_0.js  pages_1.js  pages_3.js  searchdata.js  variables_4.js  variables_8.js
samples/: CMakeLists.txt
samples/c/: CMakeLists.txt
samples/c++/: CMakeLists.txt
samples/c++/http-fileserver/: CMakeLists.txt  main.cpp
samples/c/ftp-server/: CMakeLists.txt  dfk_ftp_server.c  ftp_protocol.c
samples/c/http-echo/: CMakeLists.txt  main.c
samples/c/http-fileserver/: CMakeLists.txt
samples/c/netcat/: CMakeLists.txt  netcat.c
samples/c/tcp-echo/: CMakeLists.txt  main.c
samples/http-echo/: CMakeLists.txt  main.c
samples/http-fileserver/: main.c
samples/tcp-echo/: main.c
scripts/: bootstrap.sh  check_banned_functions.sh  check_dfk_h.sh  coverage.sh  docs.sh  format.sh  matrix_check.py  pthread_create.supp  stats.sh  visuallog.py
search/: all_3.js  all_6.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  enumvalues_0.js  files_4.js  files_9.js  files_a.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
src/: arena.c  avltree.c  buf.c  bufman.c  bufman_hk.c  bufman_hk.h  close.c  common.h  cond.c  context.c  core.c  coro.c  epoll.c  error.c  event_loop.c  eventloop.c  fiber.c  http.c  list.c  loop.c  make_nonblock.c  malloc.c  memmem.c  misc.c  mutex.c  once.c  read.c  sched.c  scheduler.c  select.c  signal.c  sponge.c  strmap.c  strtoll.c  sync.c  tcp_server.c  tcp_socket.c  urlencoding.c
src/http/: constants.c  header.c  protocol.c  request.c  response.c  server.c
src/include/dfk/: close.h  eventloop.h  internal.h  make_nonblock.h  malloc.h  memmem.h  read.h  scheduler.h  sponge.h
src/include/dfk/eventloop/: epoll.h  (+1 more)
src/internal/: arena.c  avltree.c  list.c  misc.c  sponge.c
src/middleware/: fileserver.c
src/portable/: memmem.c
tools/schedprof/: requirements.txt  setup.py
tools/schedprof/schedprof/: cli.py  coroutine.py  cpu.py  enumerated_instance.py  mutex.py  op.py  scheduler.py
tools/schedprof/tests/: test_coroutine.py  test_enumerated_instace.py  test_scheduler.py
tools/visualog/: setup.py
tools/visualog/visualog/: cli.py
ut/: CMakeLists.txt  allocators.c  allocators.h  main.c  test_arena.c  test_avltree.c  test_bufman.c  test_cond.c  test_context.c  test_core.c  test_coro.c  test_error.c  test_fiber.c  test_http.c  test_http_resp.c  test_list.c  test_misc.c  test_mutex.c  test_sponge.c  test_strmap.c  test_strtoll.c  test_sync.c  test_tcp_socket.c  test_urlencoding.c  ut.c  ut.h
ut/http/: test_http_constants.c  test_http_request.c  test_http_response.c
ut/naivetp/: naivetp.c  naivetp.h
ut/tools/: tcpprobe.py  tcpserver.py
(+4 files in other folders)
